--- a/forwardWebService/src/main/resources/application.yml
+++ b/forwardWebService/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: forward-service
+    name: software-forwardwebservice
   cloud:
     inetutils:
       timeout-seconds: 10
@@ -12,21 +12,21 @@ spring:
       # 路由配置
       routes:
         - id: wallet
-          uri: lb://wallet-service
+          uri: lb://software-walletwebservice
 
           # 转发wallet微服务的请求
           predicates:
             - Path=/wallet/**
 
         - id: query
-          uri: lb://query-service
+          uri: lb://software-querywebservice
 
           # 转发query微服务的请求
           predicates:
             - Path=/query/**
 
-        - id: query
-          uri: lb://order-service
+        - id: order
+          uri: lb://software-orderwebservice
 
           # 转发order微服务的请求
           predicates:
@@ -40,4 +40,4 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://127.0.0.1:8086/eureka/
+      defaultZone: http://software-eurekaservice:8086/eureka/
