--- a/queryWebService/src/main/resources/application.yml
+++ b/queryWebService/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 server:
   port: 8083
 
+
 spring:
   application:
     name: software-querywebservice
@@ -31,7 +32,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://127.0.0.1:8086/eureka/
+      defaultZone: http://software-eurekaservice:8086/eureka/
 
 # 高德地图配置
 amap:
